--- a/assets/sass/pages/homePage/footer/_footer.scss
+++ b/assets/sass/pages/homePage/footer/_footer.scss
@@ -151,7 +151,7 @@ footer{
     z-index: -1;
 }
 
-@media screen and (min-width:768px) and (max-width: 992px) {
+@media screen and (min-width:768px) and (max-width: 1048px) {
     .contact-header-thin{
         margin-left: 0;
     }
