--- a/assets/sass/pages/homePage/graduentsComments/_graduentsComments.scss
+++ b/assets/sass/pages/homePage/graduentsComments/_graduentsComments.scss
@@ -1,4 +1,5 @@
 #mezun{
+    padding: 25px;
     .graduate-info{
         display: flex;
         justify-content: center;
